--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,189 +1,156 @@
-/*========================= Header ===================================*/
-/*Вынесены стили текста*/
-.header-navbar__logo {
-  font-family: var(--secondary-font);
-  font-weight: bold;
-  font-size: 24px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  color: var(--primery-color);
-
-  @media screen and (min-width: 1200px) {
-    font-size: 26px;
-    line-height: 1.19;
-  }
-}
-.header-navbar__logo > span {
-  color: #000000;
-}
-.header-navbar__link {
-  font-weight: 500;
-  font-size: 40px;
-  line-height: 1.18;
-  letter-spacing: 0.02em;
-  color: var(--main-txt-color);
-  transition-property: color;
-  transition-duration: var(--time);
-  transition-timing-function: var(--time-f);
-
-  @media screen and (min-width: 768px) {
-    font-size: 14px;
-    line-height: 1.14;
-  }
-}
-.header-navbar__link--grey-color {
-  color: #757575;
-}
-
-.header-navbar__link:hover,
-.header-navbar__link:focus {
-  color: var(--primery-color);
-}
-.header-navbar__link--active {
-  color: var(--primery-color);
-}
-
-/*Вынесены стили объектов*/
-
-.header {
-  width: 480px;
-  height: 60px;
-  margin: 0 auto 0;
-  background-color: #ffffff;
+header {
   border-bottom: 1px solid #ececec;
-  // overflow: hidden;
-  position: relative;
+}
 
-  @media screen and (min-width: 768px) {
-    position: static;
-    height: 80px;
-    text-align: center;
-    padding: 20px 0px;
-    width: 768px;
-  }
-  @media screen and (min-width: 1200px) {
-    padding: 24px 0 25px 0;
-    width: 1600px;
+.header-navbar__logo {
+  display: inline-block;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  padding: 16px 0 16px 15px;
+  color: var(--primery-color);
+  font-family: var(--primary-font);
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.16;
+  letter-spacing: 0.03em;
+  &--accent {
+    color: #000000;
   }
 }
+
 .container-header {
+  position: relative;
   display: flex;
 }
+
 .header-navbar {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  margin: 10px 15px;
-  // position: relative;
 }
 
-.header-navbar__logo {
-  // margin-right: calc(450px - 134px - 40px);
-  margin-left: 0px;
-
+.header-navbar__boxes {
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
   @media screen and (min-width: 768px) {
-    margin-right: 88px;
+    display: flex;
+    margin-left: 93px;
+  }
+}
+
+.header-navbar__item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.header-navbar__link {
+  position: relative;
+  padding-top: 32px;
+  padding-bottom: 32px;
+
+  color: var(--main-txt-color);
+
+  font-family: var(--primary-font);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+
+  transition-property: color, box-shadow, background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  &--activ::after {
+    position: absolute;
+    bottom: -1px;
+    content: '';
+    display: flex;
+    width: 100%;
+    height: 4px;
+
+    background: #2196f3;
+    border-radius: 2px;
+  }
+
+  &:hover,
+  &:focus {
+    color: var(--primery-color);
+  }
+}
+
+.header-navbar__link--activ {
+  color: var(--primery-color);
+}
+
+.header-adress {
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-direction: column;
+    margin-left: auto;
+    padding-top: 21px;
+    padding-bottom: 21px;
   }
   @media screen and (min-width: 1200px) {
-    margin-right: 93px;
+    display: flex;
+    flex-direction: row;
+    margin-left: auto;
+    padding: 0;
   }
 }
-
-@media screen and (min-width: 768px) {
-  .header-style,
-  .header-navbar,
-  .header-navbar__boxes {
-    display: flex;
-    align-items: center;
-    padding: 0;
-    margin: 0;
-  }
-  .header-style {
-    margin: 0 15px;
-    justify-content: space-between;
-  }
-  .header-adress {
-    margin: 0 0 0 auto;
-    padding: 0;
-  }
-  .header-navbar__item-tablet:first-child {
+.header-navbar__adress {
+  margin-right: 15px;
+}
+.header-navbar__adress:not(:last-child) {
+  @media screen and (min-width: 768px) {
     margin-bottom: 10px;
   }
-  .header-navbar__boxes > .header-navbar__item:not(:last-child) {
+  @media screen and (min-width: 1200px) {
     margin-right: 50px;
+    margin-bottom: 0;
   }
-  .header-navbar__link:not(:last-child) {
-    margin-right: 50px;
+}
+.header-navbar__adress-link {
+  @media screen and (min-width: 1200px) {
+    padding-top: 32px;
+    padding-bottom: 32px;
   }
-  .header-navbar__item > a {
-    display: inline-flex;
-    flex-direction: row-reverse;
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+
+  color: #757575;
+
+  font-family: var(--primary-font);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+
+  transition-property: color, box-shadow, background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: var(--primery-color);
   }
-  .header-navbar__link--underline {
-    position: relative;
-  }
-  .header-navbar__link--underline::after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 4px;
-    bottom: -36px;
-    background-color: currentColor;
-    border-radius: 2px;
-    transition-property: translateY(100%);
-    transition-duration: var(--time);
-    transition-timing-function: var(--time-f);
-  }
-  .header-navbar__link--underline:hover::after,
-  .header-navbar__link--underline:focus::after {
-    transform: translateY(-100%);
-    background-color: var(--primery-color);
-  }
-  .header-navbar__item--uactive {
-    position: relative;
-  }
-  .header-navbar__item--uactive::after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 4px;
-    bottom: -32px;
-    background-color: var(--primery-color);
-    border-radius: 2px;
-  }
-  .header-navbar__link svg {
-    margin: 0px 10px 0px 0px;
-    transition-property: fill;
-    transition-duration: var(--time);
-    transition-timing-function: var(--time-f);
-  }
-  .header-navbar__link:hover svg,
-  .header-navbar__link:focus svg {
+}
+
+.header-navbar__ico-phone,
+.cheader-navbar__ico-mail {
+  color: var(--primery-font);
+}
+
+.header-navbar__icon {
+  margin-right: 10px;
+  fill: #757575;
+
+  .header-navbar__adress-link:hover &,
+  .header-navbar__adress-link:focus & {
     fill: var(--primery-color);
-  }
-}
-@media screen and (min-width: 1200px) {
-  .header-adress {
-    display: flex;
-  }
-  .header-navbar__item:first-child {
-    margin-bottom: 0px;
-  }
-  .header-navbar__item:not(:last-child) {
-    margin-right: 50px;
-  }
-  .header-style {
-    margin: 0;
-  }
-}
-
-.header-navbar__item {
-  display: none;
-
-  @media screen and (min-width: 768px) {
-    display: flex;
-    align-items: center;
-    padding: 0;
-    margin: 0;
   }
 }
