--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -17,36 +17,41 @@
 }
 /*========================= Header mobile button ===================================*/
 .header-navbar__buttons {
-  display: inline-flex;
-  border: none;
-  background-color: transparent;
-  padding: 0;
-  margin-right: calc(100vw - 2 * 15px);
-  transition-property: fill;
-  transition-duration: var(--time);
-  transition-timing-function: var(--time-f);
-  z-index: 1;
-  // position: fixed;
-
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 767px) {
     display: none;
+  }
+
+  display: inline-block;
+  margin: 0;
+  padding-right: 15px;
+  border: none;
+  width: 40px;
+  height: 40px;
+  background-color: transparent;
+
+  & .header-navbar__icon-cross {
+    display: none;
+  }
+  &.is-open .header-navbar__icon-cross {
+    display: block;
+  }
+  &.is-open .header-navbar__icon-menu {
+    display: none;
+  }
+  &.is-open {
+    position: fixed;
   }
 }
 
-.header-navbar__buttons:hover,
-.header-navbar__buttons:focus {
-  cursor: pointer;
-  fill: var(--primery-color);
-  outline: none;
-}
-.header-navbar__buttons .header-navbar__icon-cross {
-  display: none;
-}
-.header-navbar__buttons.is-open .header-navbar__icon-cross {
-  display: block;
-}
-.header-navbar__buttons.is-open .header-navbar__icon-menu {
-  display: none;
+.header-navbar__buttons {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  z-index: 4;
+  &:hover,
+  &:focus {
+    fill: var(--primery-color);
+  }
 }
 
 /*========================= Buttons portfolio ===================================*/
@@ -76,10 +81,13 @@
 
 .button-section {
   width: 480px;
-  // display: block;
   margin: 0 auto;
   background-color: #ffffff;
 
+  @media screen and (max-width: 479px) {
+    width: 100%;
+    height: 100%;
+  }
   @media screen and (min-width: 768px) {
     width: 768px;
   }
