--- a/sass/layout/_categories.scss
+++ b/sass/layout/_categories.scss
@@ -4,6 +4,10 @@
   padding: 0px 0px 60px 0px;
   width: 480px;
   margin: 0 auto;
+  @media screen and (max-width: 479px) {
+    width: 100%;
+    height: 100%;
+  }
   @media screen and (min-width: 768px) {
     width: 768px;
   }
@@ -39,6 +43,10 @@
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
   }
+  @media screen and (max-width: 479px) {
+    width: 100%;
+    height: 100%;
+  }
   @media screen and (min-width: 768px) {
     width: 354px;
     margin: 0 15px;
@@ -56,6 +64,10 @@
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
   }
+  @media screen and (max-width: 479px) {
+    width: 100%;
+    height: 100%;
+  }
   @media screen and (min-width: 768px) {
     width: 354px;
   }
@@ -67,6 +79,10 @@
 .categories__img {
   width: 450px;
   height: 294px;
+  @media screen and (max-width: 479px) {
+    width: 100%;
+    height: 100%;
+  }
   @media screen and (min-width: 768px) {
     width: 354px;
   }
