--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -5,6 +5,10 @@
   margin: 0 auto;
   width: 480px;
 
+  @media screen and (max-width: 479px) {
+    width: 100%;
+    height: 100%;
+  }
   @media screen and (min-width: 768px) {
     width: 768px;
   }
