--- a/sass/layout/_credo.scss
+++ b/sass/layout/_credo.scss
@@ -5,6 +5,10 @@
   padding: 60px 0px;
   background-color: #ffffff;
 
+  @media screen and (max-width: 479px) {
+    width: 100%;
+    height: 100%;
+  }
   @media screen and (min-width: 768px) {
     width: 768px;
     padding: 60px 0px;
