--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -6,6 +6,9 @@
   margin: 0 auto;
   width: 480px;
 
+  @media screen and (max-width: 479px) {
+    width: 100%;
+  }
   @media screen and (min-width: 768px) {
     width: 768px;
   }
@@ -161,6 +164,9 @@
     color: rgba(255, 255, 255, 0.6);
   }
 
+  @media screen and (max-width: 479px) {
+    width: 95vw;
+  }
   @media screen and (min-width: 1200px) {
     width: 358px;
     margin-right: 12px;
