--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -17,6 +17,10 @@
       url(../images/img-bg_mob@2x.jpg);
   }
 
+  @media screen and (max-width: 479px) {
+    width: 100%;
+    height: 100%;
+  }
   @media screen and (min-width: 768px) {
     width: 768px;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
