--- a/sass/layout/_navbar-menu.scss
+++ b/sass/layout/_navbar-menu.scss
@@ -4,29 +4,34 @@
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vw;
-  z-index: 0;
-  // background-color: #ffffff;
-  background-color: green;
-  padding: 48px 0 48px 40px;
+  height: 796px;
+  background-color: #ffffff;
+  padding: 48px 40px;
   text-align: left;
-
-  // @media screen and (min-width: 480px) {
-  //   left: calc((100vw - 480px) / 2);
-  // }
 }
 .header-navbar-menu__container.is-open {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  justify-content: space-between;
+  position: fixed;
+  z-index: 1;
+
   @media screen and (min-width: 768px) {
     display: none;
   }
 }
-.header-navbar-menu__boxes {
-  position: absolute;
-  display: flex;
-  padding: 0;
+
+.header-navbar-menu__boxes,
+.header-navbar-menu__links,
+.header-navbar-menu__socials {
   margin: 0;
-  flex-direction: column;
+  padding: 0;
+}
+
+.header-navbar-menu__socials {
+  display: flex;
+  flex-direction: row;
 }
 .header-navbar-menu__link {
   font-weight: 500;
@@ -47,33 +52,21 @@
   &:nth-child(-n + 2) {
     font-size: 34px;
   }
-}
-.header-navbar-menu__link--grey-color {
-  color: #757575;
+  &--blue-color {
+    color: var(--primery-color);
+  }
+  &--grey-color {
+    color: #757575;
+  }
 }
 
 .header-navbar-menu__item {
-  &:nth-child(n + 1) {
-    margin-bottom: 36px;
-  }
-  &:nth-child(n + 2) {
-    margin-bottom: 32px;
-  }
-  &:nth-child(n + 3) {
-    margin-bottom: 302px;
-  }
-  &:nth-child(n + 4) {
-    margin-bottom: 32px;
-  }
-  &:nth-child(n + 5) {
-    margin-bottom: 0;
-  }
+  margin-bottom: 32px;
 }
 
 .header-navbar-menu__socials {
   display: flex;
-  padding: 0;
-  margin: 64px 0 48px 0;
+  margin: 64px 0 0 0;
 }
 .header-navbar-menu__socials-list {
   &:not(:last-child) {
@@ -87,14 +80,14 @@
   line-height: 1.22;
   letter-spacing: 0.02em;
   margin-bottom: 32px;
-  color: #757575;
   transition-property: color;
   transition-duration: var(--time);
   transition-timing-function: var(--time-f);
-  &:hover {
-    color: var(--primery-color);
-  }
-  &:focus {
-    color: var(--primery-color);
-  }
+  color: var(--primery-color);
+  // &:hover {
+  //   color: var(--primery-color);
+  // }
+  // &:focus {
+  //   color: var(--primery-color);
+  // }
 }
