--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -6,6 +6,9 @@
   background-color: var(--background3-color);
   padding: 60px 0px;
 
+  @media screen and (max-width: 479px) {
+    width: 100%;
+  }
   @media screen and (min-width: 768px) {
     width: 768px;
   }
@@ -54,13 +57,17 @@
   }
 }
 .team__employee {
-  max-width: 450px;
+  width: 450px;
   height: auto;
   margin: 0 auto;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+
+  @media screen and (max-width: 479px) {
+    width: 100%;
+  }
 
   @media screen and (min-width: 768px) {
     margin: 0 15px;
@@ -75,6 +82,11 @@
   display: block;
   width: 450px;
   height: 460px;
+
+  @media screen and (max-width: 479px) {
+    width: 100%;
+    height: 100%;
+  }
 
   @media screen and (min-width: 768px) {
     width: 354px;
